--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Muskan khan <h1>Portfolio</h1><br />
 						</h1>
-						<p>Data Analyst skilled in SQL, Tableau and Excelsss<br />
+						<p>Data Analyst skilled in SQL, Tableau and Excel<br />
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
